apps/hipster-mc/overlays/c1-gcp/cartservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartservice-remote
spec:
  hosts:
  - cartservice
  http:
  - route:
    - destination:
        host: cartservice.hipster.global
